# hackathon-test

./: .detector-id  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: rca-all-auto.yml  rca.yml
data/: sample_dashboard_values.json  sample_splunk_alerts.json  sample_splunk_dashboard.dsl  sample_splunk_incidents.json
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  splunk_detector.tf  terraform.tfvars.example  variables.tf
src/rca_assistant/: __init__.py  cli.py  continuous_rca.py  dashboard_adapter.py  dashboard_models.py  dashboard_parser.py  email_notifier.py  engine.py  models.py  splunk_client.py  webex_utils.py
tests/: test_cli.py  test_continuous_rca.py  test_dashboard_parser_adapter.py  test_engine.py  test_splunk_client.py
