[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rca-assistant"
version = "0.1.0"
description = "AI root-cause assistant for Splunk dashboard alerts"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Hackathon Team"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
